# django-us-utility-rates

./: README.md
backend-dev-test/: README.md  pyproject.toml
backend-dev-test/.devcontainer/: Dockerfile  devcontainer.json
backend-dev-test/backend/: db.sqlite3  manage.py
backend-dev-test/backend/admin/: functional_test.py  settings.py  urls.py
backend-dev-test/backend/backend_test/: settings.py  urls.py
backend-dev-test/backend/lists/: tests.py  views.py
backend-dev-test/backend/lists/migrations/: 0001_initial.py  0002_item_text.py
backend-dev-test/backend/security/: admin.py  models.py  tests.py  views.py
backend-dev-test/backend/security/migrations/: 0001_initial.py
backend-dev-test/backend/utilities/: http_request.py  interfaces.py  models.py  processors.py  services.py  tests.py  views.py
backend-dev-test/backend/utilities/migrations/: 0001_initial.py
backend-dev-test/backend/utilities/templates/: home.html  website_demo.html
backend-dev-test/backend/utilities/tests/: e2e.py  tests.py
backend-dev-test/backend/utilities/tests/mocks/: openei_utility_rates_response_mock.py
backend-dev-test/tests/: functional_tests.py
