[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Andres Rengifo <amrengifoh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.7"
selenium = "^4.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
