[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Andres Rengifo <amrengifoh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.7"
selenium = "^4.15.2"
pydantic = "^2.5.2"
requests = "^2.31.0"
djangorestframework-simplejwt = "^5.3.0"
geopy = "^2.4.1"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
